# codex-must-work

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  install.ps1  install.sh  pyproject.toml
.codex-plugin/: plugin.json
hooks/: hooks.json
runtime/: launch-python.ps1  launch-python.sh  manifest.json  package-files.json
scripts/: __init__.py  activation_error.py  activation_validation.py  activity_epoch.py  app_server_client.py  app_server_protocol.py  cache_package.py  cache_publication.py  cache_security.py  cache_semver.py  cache_types.py  cache_windows.py  calibration.py  calibration_cli.py  calibration_scan.py  calibration_state.py  codex_compatibility.py  codex_compatibility_policy.py  codex_compatibility_types.py  codex_config.py  codex_executable.py  codex_managed_sources.py  codex_marketplace_probe.py  codex_runtime_discovery.py  config_metadata.py  config_publication.py  control.py  diagnostics.py  durations.py  event_source.py  goal_control.py  goal_turn_source.py  hook_event.py  hook_payload.py  hook_state.py  hook_trust.py  install_cache.py  install_errors.py  install_plugin.py  install_plugin_cli.py  (+50 more)
tests/: check_commit_contract.py  codex_compatibility_support.py  commit_contract_paths.py  commit_contract_rules.py  conftest.py  hook_fixture.py  install_plugin_fixtures.py  install_plugin_support.py  manager_fixture.py  native_posix_install_smoke.py  native_posix_smoke_support.py  real_install_smoke.py  real_install_smoke_fixtures.py  real_install_smoke_ledger.py  real_install_smoke_preflight.py  real_install_smoke_support.py  test_control.py  (+74 more)
(+10 files in other folders)
