[project]
name = "codex-must-work"
version = "0.1.0"
description = "Opt-in progress heartbeat monitoring for Codex tasks"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "basedpyright>=1.31",
    "pytest>=8",
    "ruff>=0.8",
]

[tool.basedpyright]
typeCheckingMode = "all"
pythonVersion = "3.12"
include = ["scripts", "tests"]
extraPaths = ["scripts"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "CPY001",
    "D203",
    "D213",
    "FBT001",
    "FBT002",
    "FIX002",
    "ISC001",
    "TD002",
    "TD003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "PLR2004", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-config", "--strict-markers"]
filterwarnings = ["error"]
